@@ -71,6 +71,7 @@ extern UV jordan_totient(UV k, UV n);
 extern UV znprimroot(UV n);
 extern UV znorder(UV a, UV n);
 extern int is_primitive_root(UV a, UV p);
+#define is_square_free(n)  (moebius(n) != 0)
 
 extern IV stirling2(UV n, UV m);
 extern IV stirling1(UV n, UV m);
